zeit.content.cp changes
=======================

0.19 (unreleased)
-----------------

- Rule-Globs ``content`` und ``is_published`` (#6059).


0.18.2 (2009-09-04)
-------------------

- Feed-Updates repariert, wenn der Feed kein Feed sondern z.B. eine HTML-Seite
  ist.


0.18.1 (2009-09-04)
-------------------

- Feed-Updates repariert, wenn Feed noch nie aktualisiert wurde.


0.18 (2009-09-04)
-----------------

- Player (vid/pls) für Video (#6150).

- Principal mit dem die Feeds veröffentlicht werden ist jetzt konfigurierbar.

- Beim Umsortieren von Teasern kann man jetzt direkt das Objekt in einem neuen
  Fenster bearbeiten (#5820).

- Ein Mouseover beim Teaser-Sortieren zeigt die Id des Objekts.

- Quiz wird ohne xi:include eingebunden (#6022).

- Quiz-Metadaten werden in der CP aktualisiert (#6167).

0.17 (2009-09-01)
-----------------

- Bessere Texte beim Bearbeiten von Teasern in der CP (#6144)

- ``cp_extra`` Block hinzugefügt: authors-register


0.16 (2009-08-31)
-----------------

- Sortieren der Blöcke innerhalb eines MR funktioniert wieder (#6112).

- Teaser sortieren funktioniert, wenn zerbrochene Objekt-Referenzen im
  XML stehen (#6133).

- Autopilot funktioniert jetzt auch, wenn ein Channel eingebunden wurde, der
  Referenzen auf nicht (mehr) vorhandene Objekte enthält.

- ``cp_extra`` Block hinzugefügt: homepage_news


0.15.1 (2009-08-27)
-------------------

- I18N-Message-Id repariert.


0.15 (2009-08-26)
-----------------

- In der CP beinhaltete Objekte werden automatisch veröffentlicht (wenn lsc <=
  dlp <= dlm, #6057)
  
- Robusteres erstellen von freien Teasern.

- Centerpage kann eingecheckt werden, auch wenn (ganz) alte Feeds beinhaltet
  sind (#6064).

- Freie Teaser werden immer mit der CP veröffentlicht (#6060).

- ``cp_extra`` Blöcke entfernt: Relateds, Debug

- RSS-Feeds: Domain-Attribut bei <category> optional (#6074).

- Feed-Elemente in der Centerpage werden jetzt korrekt geschrieben.
