@@ -26,8 +26,6 @@ teasers in the lead area[#fill-dav-with-content]_:
     <div class="supertitle"></div>
     <div class="teaserTitle"></div>
     <div class="teaserText"></div>
-    <div class="shortTeaserTitle"></div>
-    <div class="shortTeaserText"></div>
   </div>
   ...
 
@@ -56,15 +54,11 @@ When a teaser is dragged on the teaser block, it is added as the first teaser:
     <div class="supertitle"></div>
     <div class="teaserTitle">c1 teaser</div>
     <div class="teaserText"></div>
-    <div class="shortTeaserTitle">c1 teaser</div>
-    <div class="shortTeaserText"></div>
   </div>
   <div class="teaser">...
     <div class="supertitle"></div>
     <div class="teaserTitle"></div>
     <div class="teaserText"></div>
-    <div class="shortTeaserTitle"></div>
-    <div class="shortTeaserText"></div>
   </div>
   ...
 >>> zeit.content.cp.centerpage._test_helper_cp_changed
@@ -323,8 +317,6 @@ The cp contents also has changed of course:
     <div class="supertitle"></div>
     <div class="teaserTitle">Test content teaser title</div>
     <div class="teaserText">Test content teaser text</div>
-    <div class="shortTeaserTitle">c1 teaser</div>
-    <div class="shortTeaserText"></div>
   </div>
 </div>
 ...
